修改包名和命令名

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "mockserver",
+  "name": "mock-proxy-server",
   "version": "1.0.0",
   "main": "index.js",
   "bin": {
-    "mockserver": "./bin/index"
+    "mock-proxy-server": "./bin/index"
   },
   "repository": "https://github.com/wuww5511/mockServer.git",
   "author": "wuweiwei <wuww5511@126.com>",
