添加mockjs支持；代理无法连接时不使用代理

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "anyproxy": "beta",
-    "commander": "^2.10.0"
+    "commander": "^2.10.0",
+    "mockjs": "^1.0.1-beta3"
   }
 }
