--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "anyproxy": "beta",
     "commander": "^2.10.0",
+    "fs-extra": "^4.0.0",
+    "log4js": "^2.1.0",
     "mockjs": "^1.0.1-beta3"
   }
 }
