--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "bin": {
     "mock-proxy-server": "./bin/index"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": "https://github.com/wuww5511/mockServer.git",
   "author": "wuweiwei <wuww5511@126.com>",
   "license": "MIT",
@@ -14,5 +17,8 @@
     "fs-extra": "^4.0.0",
     "log4js": "^2.1.0",
     "mockjs": "^1.0.1-beta3"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.0"
   }
 }
