--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "wuweiwei <wuww5511@126.com>",
   "license": "MIT",
   "dependencies": {
-    "anyproxy": "beta",
+    "anyproxy": "4",
     "commander": "^2.10.0",
     "fs-extra": "^4.0.0",
     "log4js": "^2.1.0",
